# insight

./: .env.compose.example  .env.local.example  .env.remote.example  .env.virtuozzo.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  .trivyignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  dev-compose-seed.sh  dev-compose.sh  dev-up.sh  docker-compose.e2e.cache.yml  docker-compose.e2e.yml  docker-compose.yml
.cf-studio/config/: AGENTS.md  artifacts.toml  core.toml  pr-review.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ci/: insight-functional-values.yaml
.github/workflows/: ai-investigate.yml  backend-checks.yml  build-images.yml  ci.yml  connectors-ddl-reminder.yml  coverage.yml  data-checks.yml  data-contracts.yml  data-integrity.yml  data-quality.yml  docs-gates.yml  e2e-bronze-to-api.yml  functional-k3s.yml  gateway.yml  helm-validate.yml  metric-coverage.yml  nightly-install-test.yml  release-train.yml  security-gates.yml  security-trivy-image.yml  security-trivy.yml  semgrep.yml
charts/insight/: Chart.yaml  README.md  values.schema.json  values.yaml
compose/: insight-init.sh
compose/seed/: silver.py
cypilot/config/: artifacts.toml
deploy/: HELM_DEPLOY.md
deploy/airbyte/: README.md
deploy/argo/: README.md
deploy/compose/: authenticator-fullauth.yaml  clickhouse-user-defaults.xml  identity-resolution-fullauth.yaml  insight-init.sh  rust-watch.Dockerfile
deploy/gitops/: .gitignore  Makefile  README.md
deploy/observability/: README.md  alloy-values.yaml  grafana-values.yaml  loki-values.yaml
deploy/scripts/: install-insight.sh  install-observability.sh
deploy/seed/: Dockerfile  README.md  profiles.py  pyproject.toml  seed.py  silver.py
deploy/seed/generators/: collab.py
docs/: .docs-gate-waivers  DOCS_MAP.md  MANUAL_HELM_DEPLOY.md
docs/deploy/: Makefile
docs/domain/: README.md
scripts/: bootstrap-connector-images.sh  install-hooks.sh
scripts/ci/: changed.py  check_jwt_provider.sh  components.py  compose.metric-coverage.yml  connector_silver_coverage.py  coverage_gaps.py  data_presence_audit.py  dbt_coverage.py  docs_map.py  enforce-quality-gates.sh  metric_coverage.sh  nullable_key_audit.py  openapi_spec.py  (+1 more)
src/ingestion/connectors/hr-directory/active-directory/: Dockerfile  README.md  descriptor.yaml  pyproject.toml
src/ingestion/connectors/hr-directory/active-directory/dbt/: active_directory__bronze_promoted.sql  active_directory__identity_inputs.sql  active_directory__manager_identity_inputs.sql  active_directory__to_class_people.sql  active_directory__users_fields_history.sql  active_directory__users_snapshot.sql  schema.yml
src/ingestion/connectors/hr-directory/active-directory/source_active_directory/: __init__.py  ldap_client.py  source.py  spec.json
src/ingestion/connectors/hr-directory/active-directory/source_active_directory/streams/: __init__.py  users.py
(+914 files in other folders)
